@@ -1,6 +1,7 @@
-# Set root logger level to DEBUG and its only appender to A1.
+# Set root logger level to WARN and its only appender to A1.
 log4j.rootLogger=WARN, A1
-#log4j.rootLogger=DEBUG, A1, R # mirror logging to the file described below as R
+# set the root logger to debug and appender to both console, and a rolling file
+#log4j.rootLogger=DEBUG, A1, R
 
 
 # A1 is set to be a ConsoleAppender.
@@ -12,13 +13,13 @@ log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x %M %L- %m%n
 
 # the sample below shows logging to a rolling file
 
-#log4j.appender.R=org.apache.log4j.RollingFileAppender
-#log4j.appender.R.File=/Users/mikeconway/temp/jargon.log
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.File=/home/irods/java-projects/Jargon/jargon.log
 
-#log4j.appender.R.MaxFileSize=100KB
+log4j.appender.R.MaxFileSize=100KB
 # Keep one backup file
-#log4j.appender.R.MaxBackupIndex=1
+log4j.appender.R.MaxBackupIndex=1
 
-#log4j.appender.R.layout=org.apache.log4j.PatternLayout
-#log4j.appender.R.layout.ConversionPattern=%-4r [%t] %-5p %c %x %M %L- %m%n
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%-4r [%t] %-5p %c %x %M %L- %m%n
 
