@@ -22,6 +22,8 @@ test.confirm=false
 
 #      test.data.directory=/temp/irodsscratch/ - unix example
 #      test.data.directory=C:/projects/eclipse_workspace/jargon-svn/target/scratch/ - windows example
+#      test.data.directory=/home/irods/java-projects/Jargon/target/scratch/
+
 
 test.data.directory=/Users/mikeconway/Documents/workspace/Jargon_2_2_1/target/scratch/
 #test.data.directory=/tmp
